--- a/t/te/tec/techlearning.com.html
+++ b/t/te/tec/techlearning.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the techlearning.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217231926id_/http%3A//www.cmpnet.com/delivery/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the techlearning.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603161143id_/http%3A//www.cmpnet.com/delivery/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>CMP Media LLC Privacy Policy </title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="P3Pv1" href="http://www.cmp.com/w3c/p3p.xml">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
@@ -99,46 +100,90 @@
 
 
 
-CMP MEDIA LLC ("CMP") recognizes the importance of protecting the privacy of all information provided by users of CMP.com and our related websites. We created the following policy guidelines with a fundamental respect for our users’ right to privacy to guide our relationships with our users. 
-<p>
+CMP MEDIA LLC ("CMP") recognizes the importance of protecting the privacy of all information provided by users of our web sites, subscribers to our magazines, registrants for our events, recipients of our e-mail newsletters and all of our customers. We created this policy with a fundamental respect for our users’ right to privacy and to guide our relationships with our users. 
+This privacy statement discloses the privacy practices for all products and services owned by CMP.  A current list of our publications, web sites, online webcasts and trade shows can be found at <a href="http://www.cmp.com/">http://www.cmp.com/</a>.  <p>
 
-<b>Information Collected by CMP</b> 
-<br>
+<b>INFORMATION COLLECTION AND USE</b><br>
+CMP collects information from our website users, subscribers and customers.  In this section of our privacy policy, we will describe the type of information we collect and how we use it to provide better services to our customers.  </p><p>
 
-CMP collects information about users during their registration for some of our websites; their participation in certain activities on our websites, including contests and polls; and through the use of cookies. When users request pages from our server, our Web server automatically collects some information about the users, including their IP addresses. These addresses are used by computers on the network to send the requested pages to users.  In order to access certain portions of our websites, such as ChannelWeb and EDTN, users must register and provide certain voluntary information about themselves. 
-</p><p>
+<b>Registration and Ordering</b><br>
+When attending our trade shows, participating in our customer-sponsored webcasts, using some of our websites and signing up for certain selected services (such as free subscriptions), users must first register.  During registration, users are required to give their contact information (such as name, e-mail address, mailing address and phone number).  We also may collect demographic information (such as job title and purchasing responsibilities, company information and professional certification).  For internal purposes, we use this information to communicate with users and provide requested services, and, for our website visitors, to provide a more personalized experience on our sites.  We use aggregate demographic information about our audience to improve our service, for marketing purposes and/or industry reporting purposes.  </p><p>
 
-<b>Use of Information</b>
-<br>
+Many of our products and services are free to subscribers who meet certain demographic criteria.  Independent auditors may need to certify the eligibility of these subscribers.  In order to do that, we may collect unique identifiers (such as mother’s maiden name) that we disclose to the auditors strictly for industry reporting and audit verification purposes.   </p><p>
 
-CMP will not reveal any personal information that users provide to us to any third party without their permission
-</p><p>
+For our services that require payment (such as certain events, products and subscriptions), we also collect credit card information (such as account name, number and expiration date), which is used for billing purposes only, and is not otherwise shared.  </p><p>
 
-CMP uses users' IP addresses to help diagnose problems with our server and to administer our website.  We also use it to gather broad demographic information about our users in general.  This information does not contain anything that can identify users personally.  We may combine demographic information supplied by a subscriber at registration with site usage data to provide profiles, in aggregate form, about our users and their preferences in the content of the site and advertising.  We may share this composite information with our advertisers to help them better understand our services, but CMP does not give advertisers information about individual users of CMP.com.
-</p><p>
-   
-Using e-mail addresses provided at registration or otherwise, CMP periodically sends out e-mail newsletters and promotional e-mail to our users about services and products offered by CMP.com and its advertisers.  Users can indicate that they do not wish to receive e-mail information from CMP or its advertisers. Third parties will not contact our users through the use of our e-mail newsletter lists except through advertisements within the newsletters themselves, or unless users ask to be placed on a list to receive e-mail from our advertisers on subjects of interest.
-</p><p>
+<b>E-mail Newsletters</b><br>
+If users wish to subscribe to our e-mail newsletters, we ask for contact information (such as name, e-mail address and, occasionally, demographic information).  We use this information in the same manner as we use contact information in the registration and ordering process described above.  Recipients of our newsletters can unsubscribe using the instructions listed at the end of the e-mail newsletter.  </p><p>
 
-Our site uses cookies to deliver content specific to users' interests and to honor their preferences. This information is used to assist us in creating a site that will serve the needs of our users.
-</p><p>
+<b>Surveys and Contests</b><br>
+From time to time we invite users to provide information via surveys or contests.  Participation in these surveys or contests is completely voluntary and the user therefore has a choice whether to disclose requested contact information (such as name and mailing address) and demographic information (such as zip code or job title).  In addition to other uses set forth in this policy, contact information collected in connection with surveys and contests is used to notify the winners and award prizes, to monitor or improve the use and satisfaction of the site, and may be shared with sponsors of such surveys or contests.  </p><p>
 
-Upon request, CMP will remove users  (and their information) from our database or permit them to "opt-out" of any further e-mail newsletters or contact.
+<b>Interactive Features</b><br>
+At some of our sites, we offer interactive and community features such as discussion boards, webcasts and user profiles.  Note that all personal information sent or posted via such features becomes public information for which we are not responsible.  </p><p>
 
-Although CMP does not specifically seek to obtain any information from children, there are certain areas of our websites that children may visit.  We urge children only to give us any information after they have discussed it with their parents.
-</p><p>
+<b>Tell-A-Friend</b><br>
+If users elect to use our referral service for informing a friend about our sites and services, we may ask them for the friend's name, job title and e-mail address.  CMP will store and use this information to send the friend an invitation.  This information may also be used to provide information about our company and related products and services.  The friend may contact us as specified in the tell-a-friend message to request that no further communications be sent.  </p><p>
 
-<b>General</b>
-<br>
+<b>Communications with Us</b><br>
+We have features where users can submit information to us (such as our feedback forms). Letters to the editor and similar submissions may be made public.  Requests for service, support or information may be forwarded as needed to best respond to a specific request.  We may retain e-mails and other information sent to us for our internal administrative purposes, and to help us to serve customers better.  </p><p>
 
-CMP is not responsible for the content or the privacy polices of websites to which it may provide links or the websites of its advertisers.
-</p><p>
-CMP uses reasonable precautions to keep the personal information disclosed to us secure and to disclose such information only to responsible third parties after permission from the user. 
-</p><p>
+<b>Communications from Us:  Service Updates, Special Offers</b><br>
+In order to best serve our customers, we may send updates that contain important information about our sites and services.  For example, we send new members a welcoming message, and verify password and username for our password-protected sites.  We may also communicate with a user to provide requested services and for account-related issues via e-mail, phone or regular mail.   </p><p>
 
-If you have any questions about this privacy statement, the practices of this site or your dealings with CMP.com, you can contact: <a href="mailto:cmp@cmp.com">cmp@cmp.com</a></p></font><p><font face="Arial, Helvetica, sans-serif" size="2">
+We offer our users the option to receive information about our company, related products, services and special deals.  Users can choose not to receive these communications, as set forth in our Permission section below.  </p><p>
+
+<b>Automatic Data Collection</b><br>
+Our web sites have features that automatically collect information from users, to deliver content specific to users' interests and to honor their preferences. This information assists us in creating sites that will serve the needs of our users.   </p><p>
+
+We use "cookies," a piece of data stored on the user's hard drive containing information about the user.  Cookies benefit the user by requiring login only once, thereby saving time while on our site.  If users reject the cookies, they may be limited in the use of some areas of our site.  For example, the user may not be able to participate in sweepstakes, contests or drawings.  Cookies also enable us to track and target the interests of our users to enhance the experience on our sites.  </p><p>
+
+Some of our business affiliates use cookies on our sites in ads or promotions.  However, we have no access to or control over these business affiliates' cookies; we urge users to read their privacy policies for information.  </p><p>
+
+For our internal purposes, we gather date, time, browser type, navigation history and IP address of all visitors to our site.  This information does not contain anything that can identify users personally.  We use this information for our internal security audit log, trend analysis and system administration, and to gather broad demographic information about our user base for aggregate use.  </p><p>
+ 
+We may combine demographic information supplied by a subscriber at registration with site usage data to provide general profiles, in aggregate non-personally identifiable form, about our users and their preferences in the content of the site and advertising.  We may share this composite information with our advertisers and business affiliates to help them better understand our services.  </p><p>
+
+<b>WITH WHOM YOUR INFORMATION IS SHARED</b><br>
+When we have co-branded, customized, private label, powered by or sponsored products and services, or when we join with other parties to provide specific services, we may share (provide and receive) personal information with them.  We do not share credit card information with such third parties.  </p><p>
+
+In particular, please note that information collected in connection with online webcasts, such as at www.netseminar.com, will be shared with the sponsor of the particular webcast(s)/seminar(s).  These sponsors will use the information according to their own privacy policies, and we urge participants to read those policies and be aware of their privacy practices before registering.  </p><p>
+
+At ChipCenter.com and related sites, information may be shared with selected advertisers if a user affirmatively clicks through on a link/ad to such advertiser at those sites or in e-mails.   </p><p>
+
+On occasion, we may provide targeted lists of names and offline and online contact information for marketing purposes to third parties, subject to our Permission policies.   We give users the option of not having their name or contact information disclosed to third parties, as set forth in the Permission section.  </p><p>
+
+Other than as set forth above, we do not share personally identifiable information with other companies, apart from those acting as our agents in providing our product(s)/service(s),  and which agree to use it only for that purpose and to keep the information secure and confidential.  Also, our parent, subsidiary and affiliate companies, entities into which our company may be merged, or entities to which any of our assets, products, sites or operations may be transferred, will be able to use personal information.  We will also disclose information we maintain when required to do so by law, for example, in response to a court order or a subpoena or other legal obligation, in response to a law enforcement agency's request, or in special cases when we have reason to believe that disclosing this information is necessary to identify, contact or bring legal action against someone who may be causing injury to or interference with (either intentionally or unintentionally) our rights or property.  Users should also be aware that courts of equity, such as U.S. Bankruptcy Courts, might have the authority under certain circumstances to permit personal information to be shared or transferred to third parties without permission.  </p><p>
+
+We may share aggregate information, which is not personally identifiable, with others.  This information may include usage and demographic data, but it will not include personal information.  </p><p>
+
+<b>CORRECTION/UPDATING PERSONAL INFORMATION</b><br>
+If a user's personally identifiable information changes (such as zip code), or if a user no longer desires our product(s)/service(s),  we provide a way to correct or update that user's personal data.  The user should contact Customer Support for the applicable product or service.  </p><p>
+
+<b>PERMISSION</b><br>
+Our users are given the opportunity to choose whether to receive information from our affiliates and us not directly related to the registered services.  Users also have the opportunity to choose whether to have personal information shared with third parties for marketing purposes.  Instructions for how to exercise this choice are contained in e-mails sent by us, on our product websites and in each of our publications.  In addition, users can go to our Feedback page at <a href="http://www.cmp.com/feedback/permission.html">http://www.cmp.com/feedback/permission.html</a> to change their options.  Please note that we will endeavor to implement requests within a reasonable time, although for a time users may continue to receive mailings, etc., transmitted based on information released prior to the implementation of the request.  Users will continue to receive information directly related to their registered services, so they always are kept informed.  </p><p>
+
+<b>SECURITY</b><br>
+We use reasonable precautions to protect our users' personal information and to store it securely.  Sensitive information that is transmitted to us online (such as credit card number) is encrypted and is transmitted to us securely.  In addition, access to all of our users' information, not just the sensitive information mentioned above, is restricted.  Only employees who need the information to perform a specific job (for example, a billing clerk or a customer service representative) are granted access to personally identifiable information.  Finally, the servers on which we store personally identifiable information are kept in a secure environment.  </p><p>
+
+<b>LINKS</b><br>
+Our web sites contain links to other sites. CMP is not responsible for the privacy practices or content of such other sites.  We encourage our users to be aware when they leave our site and to read the privacy statements of each web site to which we may link that may collect personally identifiable information.  </p><p>
+
+<b>NOTIFICATION and CHANGES</b><br>
+If we change our privacy policy, we will post those changes on this page so our users are aware of what information we collect, how we use it and under which circumstances, if any, we disclose it.  Users should check this policy frequently to keep abreast of any changes.  </p><p>
+
+For questions about this privacy statement, the practices of this site or any dealings with CMP Media LLC, contact us at:  
+</p><blockquote>
+Corporate Communications<br>
+CMP Media LLC<br>
+600 Community Drive<br>
+Manhasset NY 11030<br>
+516-562-5000 Ext. 5107 <br>
+<a href="mailto:cmp@cmp.com">cmp@cmp.com</a>
+</blockquote>
+
 <b><a href="/aboutus/aboutus.htm">About Us Home</a></b></font>
-</p></td></tr>
+</td></tr>
 </tbody></table>
   </td>
  </tr>
@@ -159,11 +204,10 @@ If you have any questions about this privacy statement, the practices of this si
 <a href="/domesticpubs/ratesfiles/licensing.htm">Global Licensing</a> | 
 <a href="/domesticpubs/ratesfiles/direct.htm">List Rentals</a> |
 <a href="/newsletters">Newsletters</a> | 
-<a href="http://www.cmpreprints.com/">Reprints</a> | 
-<a href="/research.htm">Research</a></font></b></font><br>
+<a href="http://www.cmpreprints.com/">Reprints</a></font></b></font><br>
         </p>
         <p><font face="Arial, Helvetica, sans-serif" size="1"><a href="/delivery/privacy.html">Privacy
-          Statement</a> - Copyright © 2001 CMP Media LLC - <a href="mailto:cmp@cmp.com">Feedback</a></font> </p>
+          Statement</a> - Copyright © 2002 CMP Media LLC - <a href="http://www.cmp.com/feedback/default.html">Feedback</a></font> </p>
       </div>
     </td>
   </tr>
