--- a/r/ra/rai/rainbownation.com.html
+++ b/r/ra/rai/rainbownation.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainbownation.com privacy policy that was archived on 2001-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010616120320id_/http%3A//www.rainbownation.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainbownation.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603163441id_/http%3A//rainbownation.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-gb">
@@ -36,24 +36,13 @@
 	<script language="JavaScript"> var code = '';
 	var now = new Date();
 	var nIndex = now.getTime();
-	document.write('<s' + 'cript src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=6&Z=5&N=1&nocache=' + nIndex + '">');
+	document.write('<s' + 'cript src="http://www.rainbownation.com/adserve/scriptinject.asp?F=6&Z=5&N=1&nocache=' + nIndex + '">');
 	document.write('</' + 's' + 'cript>');
-	</script><script src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=6&amp;Z=5&amp;N=1&amp;nocache=1582144139532"></script>
+	</script><script src="http://www.rainbownation.com/adserve/scriptinject.asp?F=6&amp;Z=5&amp;N=1&amp;nocache=1582144145404"></script>
 	<script language="JavaScript">document.write(code);</script>
-	<noscript><a href="http://www.tradingchain.com/rainbowads/adclick.asp?F=6&Z=5&N=1">
-	<img border="0" src="http://www.tradingchain.com/rainbowads/adserve.asp?F=6&Z=5&N=1"></a></noscript>
+	<noscript><a href="http://www.rainbownation.com/adserve/adclick.asp?F=6&Z=5&N=1">
+	<img border="0" src="http://www.rainbownation.com/adserve/adserve.asp?F=6&Z=5&N=1"></a></noscript>
 	<!--------- End Ad code --------------->
-<!------- Ad code -------------
-	<script language="JavaScript"> var code = '';
-	var now = new Date();
-	var nIndex = now.getTime();
-	document.write('<s' + 'cript src="http://localhost/rbn/rainbowads/scriptinject.asp?F=0&Z=5&N=1&nocache=' + nIndex + '">');
-	document.write('</' + 's' + 'cript>');
-	</script>
-	<script language="JavaScript">document.write(code);</script>
-	<noscript><a href="http://localhost/rbn/rainbowads/adclick.asp?F=0&Z=5&N=1">
-	<img border="0" src="http://localhost/rbn/rainbowads/adserve.asp?F=0&Z=5&N=1"></a></noscript>
---------- End Ad code --------------->
 </p></td>
     <td width="2" style="font-size: 1px" bgcolor="#000000">&nbsp;</td>
   </tr>
@@ -61,14 +50,14 @@
 <table border="0" width="780" cellspacing="0" cellpadding="0" height="30">
   <tbody><tr>
     <td bgcolor="#000080" class="subtabs" align="center">
-      <p style="margin-top: 4; margin-bottom: 4"><a href="index.html" class="subtabs">Home</a>
+      <p style="margin-top: 4; margin-bottom: 4"><a href="index.asp" class="subtabs">Home</a>
       | <a href="news/index.html" class="subtabs">News</a>
       | <a href="recipes/index.html" class="subtabs">Kitchen</a> | <a href="services/index.html" class="subtabs">Immigration</a> |
-      <a href="clubs/index.html" class="subtabs">Clubs</a> | <a href="links/index.html" class="subtabs">Directory</a>
+      <a href="directory/index.asp?catID=1" class="subtabs">Clubs</a> | <a href="directory/index.asp" class="subtabs">Directory</a>
       |&nbsp; <a href="visa/index.html" class="subtabs">Visa's</a> | <a href="satourism/index.html" class="subtabs">Tourism</a>
-      | <a href="shop/index.html" class="subtabs">Shopping</a>
+      | <a href="directory/index.asp?catID=4" class="subtabs">Shopping</a>
       | <a href="diary/index.html" class="subtabs">Columns</a>&nbsp;|
-      <a href="chat/index.html" class="subtabs">Forums</a> | <a href="events/index.html" class="subtabs">Events</a>&nbsp;</p></td>
+      <a href="chat/index.html" class="subtabs">Forums</a> &nbsp;</p></td>
     <td width="2" style="font-size: 1px" bgcolor="#000000">
       <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p></td>
   </tr>
@@ -77,7 +66,7 @@
   <tbody><tr>
     <td width="158">&nbsp;</td>
     <td>
-      <p class="BodyText"><b>You are here:</b> <b><a href="index.html">Home</a>
+      <p class="BodyText"><b>You are here:</b> <b><a href="index.asp">Home</a>
       </b>&gt; Privacy</p>
     </td>
     <td class="BodyText" width="150">
@@ -166,12 +155,12 @@ document.write(date + ", " + year);
 	<script language="JavaScript"> var code = '';
 	var now = new Date();
 	var nIndex = now.getTime();
-	document.write('<s' + 'cript src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=8&Z=7&N=1&nocache=' + nIndex + '">');
+	document.write('<s' + 'cript src="http://www.rainbownation.com/adserve/scriptinject.asp?F=8&Z=7&N=1&nocache=' + nIndex + '">');
 	document.write('</' + 's' + 'cript>');
-	</script><script src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=8&amp;Z=7&amp;N=1&amp;nocache=1582144139534"></script>
+	</script><script src="http://www.rainbownation.com/adserve/scriptinject.asp?F=8&amp;Z=7&amp;N=1&amp;nocache=1582144145414"></script>
 	<script language="JavaScript">document.write(code);</script>
-	<noscript><a href="http://www.tradingchain.com/rainbowads/adclick.asp?F=8&Z=7&N=1">
-	<img border="0" src="http://www.tradingchain.com/rainbowads/adserve.asp?F=8&Z=7&N=1"></a></noscript>
+	<noscript><a href="http://www.rainbownation.com/adserve/adclick.asp?F=8&Z=7&N=1">
+	<img border="0" src="http://www.rainbownation.com/adserve/adserve.asp?F=8&Z=7&N=1"></a></noscript>
 	<!--------- End side Ad code --------------->
 	<!------- AdMentor Ad code ------------- 
 <script language="JavaScript"> var code = '';
@@ -525,13 +514,13 @@ document.write('</' + 's' + 'cript>');
 <script language="JavaScript"> var code = '';
 var now = new Date();
 var nIndex = now.getTime();
-document.write('<s' + 'cript src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=10&Z=8&N=2&nocache=' + nIndex + '">');
+document.write('<s' + 'cript src="http://www.rainbownation.com/adserve/scriptinject.asp?F=10&Z=8&N=2&nocache=' + nIndex + '">');
 document.write('</' + 's' + 'cript>');
-</script><script src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=10&amp;Z=8&amp;N=2&amp;nocache=1582144139565"></script>
+</script><script src="http://www.rainbownation.com/adserve/scriptinject.asp?F=10&amp;Z=8&amp;N=2&amp;nocache=1582144145424"></script>
                   <script language="JavaScript">document.write(code);</script>
                   <noscript>
-                  <a href="http://www.tradingchain.com/rainbowads/adclick.asp?F=10&amp;Z=8&amp;N=2">
-                  <img border="0" src="http://www.tradingchain.com/rainbowads/adserve.asp?F=10&amp;Z=8&amp;N=2"></a></noscript>
+                  <a href="http://www.rainbownation.com/adserve/adclick.asp?F=10&amp;Z=8&amp;N=2">
+                  <img border="0" src="http://www.rainbownation.com/adserve/adserve.asp?F=10&amp;Z=8&amp;N=2"></a></noscript>
 <!--------- End of book display ---------------></p>
               <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
             </td>
@@ -557,13 +546,13 @@ document.write('</' + 's' + 'cript>');
 <script language="JavaScript"> var code = '';
 var now = new Date();
 var nIndex = now.getTime();
-document.write('<s' + 'cript src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=10&Z=8&N=2&nocache=' + nIndex + '">');
+document.write('<s' + 'cript src="http://www.rainbownation.com/adserve/scriptinject.asp?F=10&Z=8&N=2&nocache=' + nIndex + '">');
 document.write('</' + 's' + 'cript>');
-</script><script src="http://www.tradingchain.com/rainbowads/scriptinject.asp?F=10&amp;Z=8&amp;N=2&amp;nocache=1582144139568"></script>
+</script><script src="http://www.rainbownation.com/adserve/scriptinject.asp?F=10&amp;Z=8&amp;N=2&amp;nocache=1582144145425"></script>
                   <script language="JavaScript">document.write(code);</script>
                   <noscript>
-                  <a href="http://www.tradingchain.com/rainbowads/adclick.asp?F=10&amp;Z=8&amp;N=2">
-                  <img border="0" src="http://www.tradingchain.com/rainbowads/adserve.asp?F=10&amp;Z=8&amp;N=2"></a></noscript>
+                  <a href="http://www.rainbownation.com/adserve/adclick.asp?F=10&amp;Z=8&amp;N=2">
+                  <img border="0" src="http://www.rainbownation.com/adserve/adserve.asp?F=10&amp;Z=8&amp;N=2"></a></noscript>
 <!--------- End of book display ---------------></p>
               <p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
             </td>
@@ -591,72 +580,61 @@ document.write('</' + 's' + 'cript>');
     <td width="148">
       <p align="center">
 <!-- START OF WEBTRENDS LIVE TAG -->
-<!-- Copyright 1999-2000 WebTrends Corporation -->
-<!-- eCommerce Revenue Tracking (patent pending) -->
-
-<!-- Visit us at http://www.webtrendslive.com -->
-
-<script language="JavaScript">
-<!--
-// You may customize the values of the variables below to suit your website.
-// Simply insert your own values between the double-quotes.
-// Here are some examples:
-//   var ORDER= "D2,Business to Consumer,Pocket FM Radio,Audio Products,10,499.99;";
-//   var SERVER= "MyServerName";
-//   var CONTENTGROUP= "ContentGroupOfThisPage";
-
-var ORDER= "";
-var SERVER= "";
-var CONTENTGROUP= "";
-//-->
-</script>
-
+<!-- Copyright 2001 NetIQ Corporation -->
+<!--  For privacy concerns, check our Privacy Policy at http://www.webtrendslive.com/privacy_policy.htm -->
 <script language="JavaScript">
 <!--
 // Modification of this code is not allowed and will permanently disable your account!
-// SiteName: The International South African Community
-var W="tagver=3&SiteId=49991&Sid=002-01-1-30-221157-49991&Tz=0&firstwkday=sunday&Edition=personal&Button=10";
-W+="&server="+escape(SERVER);
-W+="&order="+escape(ORDER);
-W+="&Group="+escape(CONTENTGROUP);
-W+="&browserDate="+escape(new Date());
-W+="&title="+escape(document.title);
-W+="&url="+window.document.URL;
-W+="&referrer="+window.document.referrer;
-W+="&appname="+escape(navigator.appName);
-W+="&appversion="+escape(navigator.appVersion);
-W+="&cookieOK="+(navigator.cookieEnabled?"Yes":"No");
-W+="&userLanguage="+(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
-W+="&platform="+navigator.platform;
-W+="&bgColor="+escape(document.bgColor);
-W+="&javaOK=Yes";
-if(typeof(screen)=="object")
+// SiteName:  The International South African Community
+function wtl_Tag4_49991()
 {
-W+="&screenResolution="+screen.width+"x"+screen.height;
-W+="&colorDepth="+screen.colorDepth;
-W+="&NSpluginList=";
-for( var i=0; i< navigator.plugins.length; i++)
-W+=escape(navigator.plugins[i].name)+";";
-}
-document.write('<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=49991">');
-document.write('<IMG BORDER="0" WIDTH="100" HEIGHT="30" SRC="http://statse.webtrendslive.com/S002-01-1-30-221157-49991/button3.asp?'+W+'">');
-document.write('</A>');
+	function D8( d)
+	{
+		var fwd=0, seed= new Date('01/01/2000'), key= "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
+		var s= key.charAt( d.getFullYear()-2000)+key.charAt( d.getMonth()+1)+key.charAt( d.getDate());
+		s+= key.charAt( d.getHours())+key.charAt( d.getMinutes())+key.charAt( d.getSeconds());
+		while( seed.getDay()!=fwd) seed= new Date(seed.getTime() + 86400000);
+		var w= Math.floor( (d.getTime()-(seed.getTime()+86400000)) / 604800000 );
+		s+= key.charAt( (w-(w%16))/16 );
+		s+= key.charAt( w%16);
+		return s;
+	}
+	var t = new Date();
+	var W="tagver=4&si=49991&fw=0&bn=10";
+	W+="&tz="+escape(t.getTimezoneOffset());
+	W+="&ch="+escape(t.getHours());
+	W+="&cl="+escape(D8(t));
+	W+="&ti="+escape(document.title);
+	W+="&url="+escape(window.document.URL);
+	W+="&rf="+escape(window.document.referrer);
+	W+="&js=Yes";
+	W+="&ul="+(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
+	if(typeof(screen)=="object")
+	{
+	W+="&sr="+screen.width+"x"+screen.height;
+	W+="&cd="+screen.colorDepth;
+	W+="&jo="+(navigator.javaEnabled()?"Yes":"No");
+	}
+	document.write('<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=49991">');
+	document.write('<IMG ID="WTL_TAG" BORDER="0" WIDTH="100" HEIGHT="30" ALT="This Site Tracked by WebTrendsLive." SRC="http://p.wtlive.com/S002-01-1-30-221157-49991/button4.asp?'+W+'">');
+	document.write('</A>');
+	}	
+wtl_Tag4_49991();
 //-->
-</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=49991"><img border="0" width="100" height="30" src="http://statse.webtrendslive.com/S002-01-1-30-221157-49991/button3.asp?tagver=3&amp;SiteId=49991&amp;Sid=002-01-1-30-221157-49991&amp;Tz=0&amp;firstwkday=sunday&amp;Edition=personal&amp;Button=10&amp;server=&amp;order=&amp;Group=&amp;browserDate=Wed%20Feb%2019%202020%2020%3A28%3A59%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=Rainbow%20Nation%20-%20Privacy%20Policy&amp;url=https://web.archive.org/web/20010616120320id_/http%3A//www.rainbownation.com/privacy.html&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
-
+</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=49991"><img id="WTL_TAG" border="0" width="100" height="30" alt="This Site Tracked by WebTrendsLive." src="http://p.wtlive.com/S002-01-1-30-221157-49991/button4.asp?tagver=4&amp;si=49991&amp;fw=0&amp;bn=10&amp;tz=0&amp;ch=20&amp;cl=K2JKT5A&amp;ti=Rainbow%20Nation%20-%20Privacy%20Policy&amp;url=https%3A//web.archive.org/web/20020603163441id_/http%253A//rainbownation.com/privacy.html&amp;rf=&amp;js=Yes&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No"></a>
 <noscript>
 <A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=49991">
-<IMG BORDER="0" WIDTH="100" HEIGHT="30" SRC="http://statse.webtrendslive.com/S002-01-1-30-221157-49991/button3.asp?tagver=3&SiteId=49991&Sid=001-00-3-10-6692-7351&Tz=0&firstwkday=sunday&Edition=personal&Button=10&title=NO%20SCRIPT&url=http://noscript&javaOK=No&">
-</A>
+<IMG BORDER="0" WIDTH="100" HEIGHT="30" ALT="This Site Tracked by WebTrendsLive." SRC="http://p.wtlive.com/S002-01-1-30-221157-49991/button4.asp?tagver=4&si=49991&fw=0&bn=10&js=No&"></A>
 </noscript>
-<!-- END OF WEBTRENDS LIVE TAG -->      </p>
+<!-- END OF WEBTRENDS LIVE TAG -->
+ </p>
 </td>
     <td>
       <p class="body8pt" align="center"><a href="about.html">ABOUT US</a>&nbsp; |&nbsp;
       <a href="contact/contact.html">CONTACT
       US</a>&nbsp; |&nbsp; <a href="privacy.html">PRIVACY</a>&nbsp;|&nbsp; <a href="advertising.html">ADVERTISING</a></p>
       <p align="center" class="body8pt"><font size="1" color="#000000">Copyright
-      © 1998-2001 2Swans Limited</font></p></td>
+      © 1998-2002 RainbowNation.com</font></p></td>
     <td width="148">
       <p align="center"><a href="about.html"><img border="0" src="images/2swanslogo.gif" width="59" height="49">
       </a></p></td>
