--- a/c/co/col/colapublib.org.html
+++ b/c/co/col/colapublib.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the colapublib.org privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211171808id_/http%3A//colapublib.org/disclaim.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the colapublib.org privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603171920id_/http%3A//www.colapublib.org/disclaim.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy &amp; Disclaimer</title>
