--- a/k/ke/ket/ket.org.html
+++ b/k/ke/ket/ket.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ket.org privacy policy that was archived on 2001-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011020031253id_/http%3A//ket.org/agency/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ket.org privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603175243id_/http%3A//www.ket.org/agency/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>KET - Privacy and User Agreement Policy</title>
@@ -50,7 +50,7 @@ function img_dim(imgName) {if (navigator.appVersion.charAt(0) >= "3") {imgOff = 
  
 <table width="97%" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr valign="top">
-	<td width="1%" rowspan="2" align="right"><a href="/" target="_top"><img src="/images/glass/sub/ket-bar.gif" width="138" height="62" alt="KET Home Page" border="0"></a></td>
+	<td width="1%" rowspan="2" align="right"><a href="/" target="_top"><img src="/images/glass/sub/ket-bar.gif" width="138" height="62" alt="Official KET LOGO at www.ket.org/logos/" border="0"></a></td>
 	<td align="right" height="11"><img src="/images/glass/sub/agencynav.gif" width="319" height="11" alt="KET Links" border="0" usemap="#ketlinks"></td>
 </tr>
 <tr valign="top">
@@ -224,21 +224,19 @@ By using this site, you signify your agreement to the terms and conditions of th
 
 <table width="100%" cellspacing="0" cellpadding="6" border="0">
 <tbody><tr>
-	<td><font size="-2">
-	Copyright © 2001 KET
+	<td class="foot" width="30%" nowrap=""><font size="-2">
+	<a href="/agency/privacy/">Privacy Policy</a>
+	</font></td>
+	<td class="foot" align="center" width="40%"><font size="-2">
+	Copyright © 2002 KET
 
 	</font></td>
-	<td align="right">
+	<td align="right" class="foot" width="30%">
 	<font size="-2">
 	<a href="mailto:webmaster@ket.org">Webmaster</a>
-	</font>
-</td>
+	</font></td>
 </tr>
 </tbody></table>
-
-
-
-
 
 
 <!-- Bottom Navigation Above - Do Not Edit -->
